force-app/main/default/objects/Match__c/fields/DateMatch__c.field-meta.xml
<CustomField>
    <fullName>DateMatch__c</fullName>
    <label>DateMatch</label>
    <type>Date</type>
</CustomField>