force-app/main/default/objects/Match__c/fields/TeamTwo__c.field-meta.xml
<CustomField>
    <fullName>TeamTwo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamTwo</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches (TeamTwo)</relationshipLabel>
    <relationshipName>Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>