force-app/main/default/objects/Match__c/validationRules/MatchError.validationRule-meta.xml
<ValidationRule>
    <fullName>MatchError</fullName>
    <active>true</active>
    <errorConditionFormula>TeamOne__c ==  TeamTwo__c</errorConditionFormula>
    <errorMessage>The team can&#39;t play against themselves!</errorMessage>
</ValidationRule>